test/force-app/main/default/objects/Employee__c/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <label>Account name</label>
    <length>220</length>
    <type>Text</type>
</CustomField>