test/force-app/main/default/objects/Employee__c/fields/branch__c.field-meta.xml
<CustomField>
    <fullName>branch__c</fullName>
    <label>branch</label>
    <length>220</length>
    <type>Text</type>
</CustomField>