test/force-app/main/default/objects/Employee__c/fields/branch_file__c.field-meta.xml
<CustomField>
    <fullName>branch_file__c</fullName>
    <label>branch file</label>
    <length>220</length>
    <type>Text</type>
</CustomField>