test/force-app/main/default/objects/Employee__c/fields/new__c.field-meta.xml
<CustomField>
    <fullName>new__c</fullName>
    <label>new</label>
    <length>200</length>
    <type>Text</type>
</CustomField>