test/force-app/main/default/objects/Employee__c/fields/new_file__c.field-meta.xml
<CustomField>
    <fullName>new_file__c</fullName>
    <label>new file</label>
    <length>220</length>
    <type>Text</type>
</CustomField>