test/force-app/main/default/objects/Employee__c/fields/source_field__c.field-meta.xml
<CustomField>
    <fullName>source_field__c</fullName>
    <label>source field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>